--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "@angular/service-worker": "~9.1.6",
     "@capacitor/cli": "^2.1.2",
     "@capacitor/core": "^2.1.2",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@logisticinfotech/ionic4-datepicker": "^1.4.3",
+    "capacitor-datepicker": "0.0.2",
+    "moment": "^2.27.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
