--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@angular/service-worker": "~9.1.6",
+    "@aspnet/signalr": "^1.1.4",
     "@capacitor/cli": "^2.1.2",
     "@capacitor/core": "^2.1.2",
     "@ionic-native/core": "^5.0.7",
@@ -28,6 +29,7 @@
     "@ionic/angular": "^5.0.0",
     "@logisticinfotech/ionic4-datepicker": "^1.4.3",
     "capacitor-datepicker": "0.0.2",
+    "ionic-text-avatar": "^1.1.0",
     "moment": "^2.27.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
