Fix typo in angular json config.

--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,7 @@
                 "input": "src/global.scss"
               }
             ],
-            "scripts": [z]
+            "scripts": []
           },
           "configurations": {
             "production": {
