--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@logisticinfotech/ionic4-datepicker": "^1.4.3",
+    "@synapsium/ngx-lottie": "^8.2.9",
     "capacitor-datepicker": "0.0.2",
+    "highcharts": "^8.1.2",
     "ionic-text-avatar": "^1.1.0",
+    "lottie-web": "^5.7.0",
     "moment": "^2.27.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
