Add ng-lottie dependency.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ionic-text-avatar": "^1.1.0",
     "lottie-web": "^5.7.0",
     "moment": "^2.27.0",
+    "ng-lottie": "^0.3.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
