Fix lotter-player not identified as custom element.

--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@lottiefiles/lottie-player": "^0.5.1",
     "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.10.6.tgz",
     "@synapsium/ngx-lottie": "^8.2.9",
+    "@teamhive/lottie-player": "^1.0.0",
     "capacitor-datepicker": "0.0.2",
     "highcharts": "^8.1.2",
     "ionic-text-avatar": "^1.1.0",
-    "lottie-web": "^5.7.0",
     "moment": "^2.27.0",
     "ng-lottie": "^0.3.2",
     "rxjs": "~6.5.1",
