--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@synapsium/ngx-lottie": "^8.2.9",
     "@teamhive/lottie-player": "^1.0.0",
     "capacitor-datepicker": "0.0.2",
+    "goog-webfont-dl": "^1.0.3",
     "highcharts": "^8.1.2",
     "ionic-text-avatar": "^1.1.0",
     "moment": "^2.27.0",
