Add more api urls declaration in dataGroups cache strategy.

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -40,6 +40,18 @@
       "version": 1,
       "urls": [
         "/api",
+        "/api/Inpatient/YearHistoryGraph/",
+        "/api/Inpatient/MonthHistoryGraph/",
+        "/api/Inpatient/TotalCount/",
+        "/api/Inpatient/Get/",
+        "/api/Inpatient/CoDoctors/",
+        "/api/ProfFee/Insert",
+        "/api/ProfFee/Update",
+        "/api/ProfFee/Delete",
+        "/api/Schedules",
+        "/api/DoctorSchedMaster/DocSchedMaster/",
+        "/api/CMAAppointmentMaster/GetCMAAppointmentMaster/",
+        "/api/CMAAppointmentMaster",
         "/menu/dashboard",
         "/menu/in-patients",
         "/menu/in-patients/AC",
