Update cache config strategy.

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -40,18 +40,18 @@
       "version": 1,
       "urls": [
         "/api",
-        "/api/Inpatient/YearHistoryGraph/",
-        "/api/Inpatient/MonthHistoryGraph/",
-        "/api/Inpatient/TotalCount/",
-        "/api/Inpatient/Get/",
-        "/api/Inpatient/CoDoctors/",
+        "/api/Inpatient/YearHistoryGraph/**",
+        "/api/Inpatient/MonthHistoryGraph/**",
+        "/api/Inpatient/TotalCount/**",
+        "/api/Inpatient/Get/**",
+        "/api/Inpatient/CoDoctors/**",
         "/api/ProfFee/Insert",
         "/api/ProfFee/Update",
-        "/api/ProfFee/Delete",
-        "/api/Schedules",
-        "/api/DoctorSchedMaster/DocSchedMaster/",
-        "/api/CMAAppointmentMaster/GetCMAAppointmentMaster/",
-        "/api/CMAAppointmentMaster",
+        "/api/ProfFee/Delete?**",
+        "/api/Schedules?**",
+        "/api/DoctorSchedMaster/DocSchedMaster/**",
+        "/api/CMAAppointmentMaster/GetCMAAppointmentMaster/**",
+        "/api/CMAAppointmentMaster?**",
         "/menu/dashboard",
         "/menu/in-patients",
         "/menu/in-patients/AC",
@@ -60,9 +60,9 @@
       ],
       "cacheConfig": {
         "strategy": "freshness",
-        "maxSize": 1, 
-        "maxAge": "1s",
-        "timeout": "0u"
+        "maxSize": 0, 
+        "maxAge": "0s",
+        "timeout": "5s30u"
       }
     }
   ]
