Update release version

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -2,8 +2,8 @@
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
   "appData": {
-    "version": "1.0.0-rc21",
-    "changelog": "Version 1.0.0 release candidate 21."
+    "version": "1.0.0",
+    "changelog": "Version 1.0.0 release."
   },
   "assetGroups": [
     {
