Simplify Docker Compose using the PWA nginx image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,11 @@ version: "3.8"
 
 services:
   pwa:
-    image: coolnumber9/dpp:v1.1.2
-    volumes: 
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    image: coolnumber9/dpp:v1.2.x-on-nginx
     ports:
-      - 80:80
+      - 8080:80
     
   middleware:
     image: coolnumber9/dpp:v1.0.3-middleware
     ports:
-        - 8085:8085
-
-volumes: 
-    /sys/fs/cgroup:
+      - 8085:8085
