--- a/dockerfiles/nginx/dpp-nginx.conf
+++ b/dockerfiles/nginx/dpp-nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  pwa;
+    server_name  localhost;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
@@ -10,7 +10,7 @@ server {
         index  index.html index.htm;
     }
 
-    # proxy the API calls to NodeJS app listening on 127.0.0.1:8085
+    # proxy the API calls to Doctors' Portal NodeJS app listening on 127.0.0.1:8085
     
     location /api {
        proxy_pass   http://middleware:8085/api;
