Disable nginx proxy for middleware.

--- a/dpp-nginx.conf
+++ b/dpp-nginx.conf
@@ -12,9 +12,9 @@ server {
 
     # proxy the API calls to Doctors' Portal NodeJS app listening on 127.0.0.1:8085
     
-    location /api {
-       proxy_pass   http://middleware:8085/api;
-    }
+    # location /api {
+    #    proxy_pass   http://middleware:8085/api;
+    # }
 
 
     #error_page  404              /404.html;
