--- a/docker-compose-cypress.yml
+++ b/docker-compose-cypress.yml
@@ -29,6 +29,8 @@ services:
     volumes:
       - ./:/e2e
 
+# Just added a comment to test pipeline trigger.
+      
 # services: 
 #     # this container will run Cypress test using Chrome browser
 #     e2e-chrome:
