--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,19 +20,25 @@ pipelines:
     branches:
         '{master,dev_branch}':
             - step:
-                name: Master and Dev Branch Pipe
+                name: Doctors' Portal PWA E2E Tests
                 caches:
-                    - npm
-                    - cypress
-                image: cypress/base:10
+                    - docker
+                #    - npm
+                #    - cypress
+                #image: cypress/base:10
+                image: docker/compose:latest
+                services:
+                    - docker
                 script:
-                    - echo "Running Cypress CI..."
-                    - npm ci
-                    - npx cypress run
-                artifacts:
-                    - cypress/screenshots/**
-                    - cypress/reports/**
-                    - cypress/videos/**
+                    - echo "Building and then Test the app..."
+                    - docker-compose -f docker-compose-cypress.yml build 
+                    - docker-compose -f docker-compose-cypress.yml up --exit-code-from cypress
+                    #- npm ci
+                    #- npx cypress run
+                #artifacts:
+                    #- cypress/screenshots/**
+                    #- cypress/reports/**
+                    #- cypress/videos/**
 
 definitions:
     caches:
