--- a/docker-compose-cypress.yml
+++ b/docker-compose-cypress.yml
@@ -10,15 +10,15 @@ services:
     #restart: unless-stopped
     ports: 
       - 80:80
-    #environment:
-    #  - PORT=8100
+
   # Cypress container
   cypress:
     # the Docker image to use from https://github.com/cypress-io/cypress-docker-images
     image: "cypress/included:5.3.0"
     container_name: cypress
+    ipc: host
     #restart: unless-stopped
-    command: "npm run cypress:run:record"
+    entrypoint: "npm run cypress:run:record"
     depends_on:
       - pwa
     environment:
