--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "cypress:open": "npx cypress open",
     "cypress:run": "npx cypress run",
-    "cypress:run:record": "cypress run --record --key 453bf8a2-2b71-4bc9-9e3a-d0590369032e",
+    "cypress:run:record": "cypress run --browser chrome --record --key 453bf8a2-2b71-4bc9-9e3a-d0590369032e",
     "compodoc": "npx compodoc -p tsconfig.json -w -s --hideGenerator --customLogo /src/assets/icons/icon-512x512.png --name Doctors-Portal-App"
   },
   "private": true,
