Remove Cypress in Docker image for CI/CD.

--- a/dockerfiles/chh-it-dpp-ci-cd/Dockerfile
+++ b/dockerfiles/chh-it-dpp-ci-cd/Dockerfile
@@ -25,7 +25,7 @@ RUN npm install -g @ionic/cli
 # Install Cypress
 # RUN npm install -g cypress
 # RUN npm install cypress@5.3.0
-RUN npm install -g cypress --unsafe-perm --silent
+# RUN npm install -g cypress --unsafe-perm --silent
 # Cypress cannot write to the cache directory due to file permissions (Even as root)
 # - https://github.com/cypress-io/cypress/issues/3081
 # - https://github.com/cypress-io/cypress/issues/1281
@@ -35,18 +35,18 @@ ARG PORT_TO_EXPOSE="80/tcp"
 
 # HOW TO BUILD THE IMAGE
 # cd to the directory where this file is stored
-# docker build -t coolnumber9/node-ionic-angular-cypress:nov2020-v1.0.0 .
+# docker build -t coolnumber9/node-ionic-angular:nov2020-v1.0.1 .
 #
 # If rebuilding without cache
-# docker build --no-cache -t coolnumber9/node-ionic-angular-cypress:nov2020-v1.0.0 . 
+# docker build --no-cache -t coolnumber9/node-ionic-angular:nov2020-v1.0.1 . 
 
 # HOW TO RUN THE CONTAINER
-# docker run --rm -it -dp 9000:80 --name chh-it-dpp-ci-cd-v1.0.0 coolnumber9/node-ionic-angular-cypress:nov2020-v1.0.0
+# docker run --rm -it -dp 9000:80 --name chh-it-dpp-ci-cd-v1.0.1 coolnumber9/node-ionic-angular:nov2020-v1.0.1
 
 # HOW TO EXECUTE BASH inside the container
-# docker exec -it chh-it-dpp-ci-cd-v1.0.0 bash
-# docker exec -it chh-it-dpp-ci-cd-v1.0.0 sh <-- Alpine doesn't have bash shell
+# docker exec -it chh-it-dpp-ci-cd-v1.0.1 bash
+# docker exec -it chh-it-dpp-ci-cd-v1.0.1 sh <-- Alpine doesn't have bash shell
 
 # HOW TO TAG ANG PUSH to remote repo
-# docker tag coolnumber9/node-ionic-angular-cypress:v1.0.0 coolnumber9/node-ionic-angular-cypress:nov2020-v1.0.0 
-# docker push coolnumber9/node-ionic-angular-cypress:nov2020-v1.0.0 
+# docker tag coolnumber9/node-ionic-angular:nov2020-v1.0.1 coolnumber9/node-ionic-angular:nov2020-v1.0.1 
+# docker push coolnumber9/node-ionic-angular:nov2020-v1.0.1 
