Update pipeline NOT to install dev dependencies in Prod build.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,10 +11,10 @@ pipelines:
         name: Install and Build
         caches:
           - npm
-          - cypress
+          # - cypress
         script:
-          - npm install -g cypress --unsafe-perm --silent
-          - npm install
+          # - npm install -g cypress --unsafe-perm --silent
+          - npm install --production
           - ionic build --prod
     - step:
         name: E2E using Cypress
