--- a/dockerfiles/chh-it-dpp-ci-cd/Dockerfile
+++ b/dockerfiles/chh-it-dpp-ci-cd/Dockerfile
@@ -16,16 +16,17 @@ LABEL maintainer="Kristoffer Dominic Amora, IT - Systems Solution & Business Int
 
 # Install Angular CLI
 RUN npm install -g @angular/cli
-# RUN npm install -g @angular/cli@9.1.12
+# RUN npm install -g @angular/cli@9.1.12 <- if specific version is desired
 
 # Intall Ionic CLI
 RUN npm install -g @ionic/cli
-# RUN npm install @ionic/cli@6.1.0
+# RUN npm install @ionic/cli@6.1.0 <- if specific version is desired
 
 # Install Cypress
 # RUN npm install -g cypress
-# RUN npm install cypress@5.3.0
+# RUN npm install cypress@5.3.0 <- if specific version is desired
 # RUN npm install -g cypress --unsafe-perm --silent
+#   Workaround: sudo npm install --unsafe-perm=true --allow-root cypress
 # Cypress cannot write to the cache directory due to file permissions (Even as root)
 # - https://github.com/cypress-io/cypress/issues/3081
 # - https://github.com/cypress-io/cypress/issues/1281
@@ -44,8 +45,8 @@ ARG PORT_TO_EXPOSE="80/tcp"
 # docker run --rm -it -dp 9000:80 --name chh-it-dpp-ci-cd-v1.0.1 coolnumber9/node-ionic-angular:nov2020-v1.0.1
 
 # HOW TO EXECUTE BASH inside the container
-# docker exec -it chh-it-dpp-ci-cd-v1.0.1 bash
-# docker exec -it chh-it-dpp-ci-cd-v1.0.1 sh <-- Alpine doesn't have bash shell
+# docker exec -it chh-it-dpp-ci-cd-v1.0.1 bash  <- If base image used has bash installed
+# docker exec -it chh-it-dpp-ci-cd-v1.0.1 sh    <- Alpine doesn't have bash shell
 
 # HOW TO TAG ANG PUSH to remote repo
 # docker tag coolnumber9/node-ionic-angular:nov2020-v1.0.1 coolnumber9/node-ionic-angular:nov2020-v1.0.1 
