Add wait-on module to be used in automated build scripts.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ngx-google-analytics": "^9.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
+    "wait-on": "^5.2.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
