--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,11 +16,12 @@ pipelines:
         script:
           # - npm install -g cypress --unsafe-perm --silent
           # - npm install --production
-          - npm install -g @angular/cli
-          - npm install -g @ionic/cli
+          #- npm install -g @angular/cli
+          #- npm install -g @ionic/cli
           #- npm install
           #- ionic build --prod
-          - npm ci
+          #- npm ci
+          - npm install 
           #- ionic serve 
           #- ionic serve & wait-on http://localhost:8100
           - ng run app:serve --host=localhost --port=8100 & wait-on http://localhost:8100
