Add wait-on installation in script.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,6 +17,7 @@ pipelines:
           # - npm install -g cypress --unsafe-perm --silent
           # - npm install --production
           - npm install -g @angular/cli
+          - npm install wait-on
           #- npm install -g @ionic/cli
           #- npm install
           #- ionic build --prod
