--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -52,7 +52,7 @@ pipelines:
           #size: 2x
           script:
             - echo "Building Production Artifacts..."
-            - npm install
+            - npm install --production
             - ionic build --prod
             # - docker-compose -f docker-compose-cypress.yml build
             # - docker-compose -f docker-compose-cypress.yml up --exit-code-from cypress
